Refactor testing entry points
