# src/main/java/io/github/geniot/sayagain/controllers/UserController.java
@@ -1,7 +1,5 @@
 package io.github.geniot.sayagain.controllers;
 
-import io.github.geniot.sayagain.services.UserService;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestHeader;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -9,14 +7,17 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequestMapping("${apiPrefix}/users")
-public class UserController {
-
-    @Autowired
-    private UserService userService;
+public class UserController extends BaseController {
 
     @GetMapping("/signin")
     public String login(@RequestHeader("X-email") String email,
                         @RequestHeader("X-password") String password) {
         return userService.signin(email, password);
+    }
+
+    @GetMapping("/signup")
+    public String signup(@RequestHeader("X-email") String email,
+                         @RequestHeader("X-password") String password) {
+        return userService.signup(email, password);
     }
 }
